keycloak/keycloak-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 9
  labels:
    net.pflaeging.deployment: idptest-stickiebox-keycloak
  name: idptest-stickiebox-keycloak
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      net.pflaeging.deployment: idptest-stickiebox-keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        net.pflaeging.deployment: idptest-stickiebox-keycloak
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: idptest-stickiebox 
        image: docker-registry.default.svc:5000/sb/keycloak:latest
        imagePullPolicy: Always
        name: keycloak
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
