keycloak/postgresql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    net.pflaeging.deployment: idptest-stickiebox-postgresql
  name: idptest-stickiebox-postgresql
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      net.pflaeging.deployment: idptest-stickiebox-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        net.pflaeging.deployment: idptest-stickiebox-postgresql
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: idptest-stickiebox
        image: docker-registry.default.svc:5000/sb/postgresql:latest
        imagePullPolicy: Always
        name: keycloak-db
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: idptest-stickiebox-pg-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: idptest-stickiebox-pg-data
        persistentVolumeClaim:
          claimName: idptest-stickiebox-pg-data
status: {}
