keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    net.pflaeging.service: keycloak
    net.pflaeging.instance: idptest-stickiebox
  name: idptest-stickiebox-keycloak
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    net.pflaeging.deployment: idptest-stickiebox-keycloak
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
