keycloak/route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    net.pflaeging.route: idptest-stickiebox-keycloak
  name: idptest-stickiebox-keycloak
spec:
  host: idptest.stickiebox.org
  port:
    targetPort: 8080-tcp
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIGCDCCA/CgAwIBAgIQKy5u6tl1NmwUim7bo3yMBzANBgkqhkiG9w0BAQwFADCB
[...]
      +AZxAeKCINT+b72x
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFdDCCBFygAwIBAgIQJ2buVutJ846r13Ci/ITeIjANBgkqhkiG9w0BAQwFADBv
[...]
      pu/xO28QOG8=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIENjCCAx6gAwIBAgIBATANBgkqhkiG9w0BAQUFADBvMQswCQYDVQQGEwJTRTEU
[...]
      mnkPIAou1Z5jJh5VkpTYghdae9C8x49OhgQ=
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIG2zCCBcOgAwIBAgIQWqLRaUBUp7p2+y86GBAplDANBgkqhkiG9w0BAQsFADCB
[...]
      YVHHvkYPqM2eAOtiXI8LduYv8E3PhyRmWQDlSXqBIw==
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEA62XPTwOdAaFZT0njjwh4rDVKJXD4ksG4p+9zZuMA267BXK3g
[...]
      AW+/FhTiK5L03r86H9R3Bsc+2+fiqr3ZSWh+PmJMunnhYXhNc74R
      -----END RSA PRIVATE KEY-----
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: idptest-stickiebox-keycloak
    weight: 100
  wildcardPolicy: None
status: {}
